--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <th>Gols</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="pincipalBody">
                 <tr>
                     <td>1</td>
                     <td>
