--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
@@ -12,63 +13,47 @@
     <div class="filterSections">
         <div class="inputSection">
             <label for="liga">Nome da liga</label>
-            <select name="liga">
-                <option value="pl" selected>Premier League</option>
+            <select name="liga" id="liga">
+                <option value="pl">Premier League</option>
                 <option value="laliga" >La Liga</option>
                 <option value="liganos">Liga NOS</option>
                 <option value="seriea">Serie A</option>
-                <option value="bundesliga">Valor 3</option>
+                <option value="bundesliga">Bundesliga</option>
             </select>   
         </div>
         <div class="inputSection"></div>
             <label for="show">Mostrar</label>
-            <select name="show">
+            <select id="mostrarQuantos" name="show">
                 <option value="5" >5</option>
                 <option value="10" >10</option>
                 <option value="15">15</option>
                 <option value="20">20</option>
-                <option value="25" selected>25</option>
+                <option value="25">25</option>
             </select> 
         </div>
-        <button>Mostrar</button>
+        <button id="btnMostrar" onclick="renderTopLeaders()">Mostrar</button>
     </div>
     <div class="table-main">
-        <table class="main">
+        <table class="table table-striped table-responsive-md">
             <thead>
-                <tr>
-                    <th>Posição Ranking</th>
-                    <th>Nome</th>
-                    <th>Nacionalidade</th>
-                    <th>Idade</th>
-                    <th>Clube</th>
-                    <th>Jogos</th>
-                    <th>Gols</th>
-                </tr>
+              <tr>
+                <th scope="col">Posição</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Nacionalidade</th>
+                <th scope="col">Idade</th>
+                <th scope="col">Clube</th>
+                <th scope="col">Jogos</th>
+                <th scope="col">Gols</th>
+              </tr>
             </thead>
-            <tbody class="pincipalBody ">
-                <tr>
-                    <td>1</td>
-                    <td>
-                        <table class="jogador">
-                            <tbody>
-                                <tr>
-                                    <td><img src="https://img.a.transfermarkt.technology/portrait/medium/418560-1656179352.jpg?lm=1" alt=""></td>
-                                </tr>
-                                <tr>
-                                    <td>Erling Haaland</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                    <td>Noruega</td>
-                    <td>21</td>
-                    <td>ManCity</td>
-                    <td>16</td>
-                    <td>22</td>
-                </tr>
+            <tbody id="table">
+              
             </tbody>
-        </table>
+          </table>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="assets/js/index.js"></script>
 </body>
 </html>
