site atualiza sozinho

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <option value="25">25</option>
             </select> 
         </div>
-        <button id="btnMostrar" onclick="renderTopLeaders()">Mostrar</button>
+        <button onclick="renderTopLeaders()">Mostrar</button>
     </div>
     <div class="table-main">
         <table class="table table-striped table-responsive-md">
